<resources>
    <string name="app_name">GestSIO</string>
    <string name="consultation_Etudiant">Consultation étudiant</string>
    <string name="consultation_etudiant">Consultation étudiant</string>
    <string name="nom">Nom :</string>
    <string name="nom_de_l_etudiant">Nom de l\'étudiant</string>
    <string name="adresse">Adresse :</string>
    <string name="prenom">Prénom :</string>
    <string name="prenom_de_l_etudiant">Prénom de l\'étudiant</string>
    <string name="date_de_naissance">Date de naissance :</string>
    <string name="jj_mm_aaaa">JJ/MM/AAAA</string>
    <string name="adresse_de_l_etudiant">Adresse de l\'etudiant</string>
    <string name="code_postal">Code postal:</string>
    <string name="son_code_postale">Son code postale</string>
    <string name="ville">Ville :</string>
    <string name="ville_de_l_etudiant">Ville de l\'étudiant</string>
    <string name="numero_de_telephone">Numéro de téléphone :</string>
    <string name="num_de_l_etudiant">Num de l\'étudiant</string>
    <string name="courriel">Courriel :</string>
    <string name="courriel_de_l_etudiant">Courriel de l\'étudiant</string>
    <string name="commentaire_sur_l_etudiant">Commentaire sur l\'étudiant</string>
    <string name="observations">Observations :</string>
    <string name="commentaires_sur_l_etudiant">Commentaire(s) sur l\'étudiant</string>
    <string name="saisie_nouvel_etudiant">Saisie d\'un nouvel étudiant</string>
    <string name="valider">Valider</string>
    <string name="action_settings">Options</string>
    <string name="hint_nom">Nom…</string>
    <string name="hint_prenom">Prénom…</string>
    <string name="button_save">Sauvegarder</string>
    <string name="not_saved">Etudiant non sauvegardé</string>
    <string name="saved">Etudiant sauvegardé.</string>
    <string name="add_student">Ajout étudiant</string>
    <string name="hint_naissance">Date de naissance</string>
    <string name="hint_adresse">Adresse</string>
    <string name="hint_codePostal">Code Posatal</string>
    <string name="hint_ville">Ville</string>
    <string name="hint_telephone">Numéro de téléphone</string>
    <string name="hint_courriel">Courriel</string>
    <string name="hint_observation">Observation</string>
    <string name="button_delete">Supprimer</string>
    <string name="button_edit">Modifier</string>
    <string name="hint_Option">SLAM ou SISR</string>
    <string name="deleted">Etudiant supprimé</string>
    <string name="updated">Etudiant modifié</string>

</resources>