<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewEtudiantActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">



        <EditText
            android:id="@+id/edit_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_margin="@dimen/small_padding"
            android:layout_marginStart="8dp"
            android:autofillHints=""

            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_nom"
            android:inputType="textCapCharacters|textPersonName|textAutoComplete"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:autofillHints=""
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_prenom"
            android:inputType="textCapWords|textPersonName|textAutoComplete"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/edit_naissanceEtudiant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:autofillHints=""
            android:fontFamily="sans-serif-light"

            android:hint="@string/hint_naissance"
            android:inputType="date"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_adresseEtudiant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:autofillHints=""
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_adresse"
            android:inputType="textCapCharacters|textAutoComplete"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/edit_codePostalEtudiant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:autofillHints=""
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_codePostal"
            android:inputType="number|textAutoComplete"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/edit_villeEtudiant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:autofillHints=""
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_ville"
            android:inputType="textCapCharacters|textAutoComplete"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/edit_numéroDeTéléphoneEtudiant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:autofillHints=""
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_telephone"
            android:inputType="phone|textAutoComplete"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_courrielEtudiant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:autofillHints=""
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_courriel"
            android:inputType="textEmailAddress"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/edit_observationsEtudiant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:autofillHints=""
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_observation"
            android:inputType="textCapSentences|textMultiLine|textAutoComplete"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp" />





        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:background="@color/colorPrimary"
            android:text="@string/button_save"

            android:textColor="@color/buttonLabel" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>